<resources>
    <string name="app_name">Third Ear</string>

    <string name="title_activity_alert"></string>
    <string name="title_key_words">Key Words</string>

    <string name="action_settings">Settings</string>
    <string name="nav_subtext">SNAP project</string>
    <string name="nav_title">Third Ear</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="stopped_msg">Ready to listen</string>
    <string name="started_msg">Listening......</string>
    <string name="intent_trigger">TRIGGER</string>
    <string name="intent_group">GROUP</string>
    <string name="keywords_unavailable">No Keywords are available</string>
    <string name="ok">OK</string>
    <string name="add_key_words">Add Key Word</string>
    <string name="cancel">Cancel</string>
    <string name="add_keyword">Save</string>
    <string name="keywords_select_group">\nSelect a group: </string>
    <string name="enter_key_words">Enter key words</string>
    <string name="add_keyword_group_empty_error">Cannot add keyword as group is empty</string>
    <string name="add_keyword_empty_text_error">please enter key word</string>
    <string name="acknowledge">Acknowledge</string>
    <string name="title_quickview">Quick View</string>
    <string name="title_alertPreferences">Alert Preferences</string>
    <string name="intent_img">alert_img</string>
    <string name="pref_selectLang_title">Choose Language</string>
    <string name="pref_selectLang_dilTitle">Choose a language</string>
    <string name="pref_selectLang_default">EN</string>
    <string name="pref_LangCat_title">Language</string>
    <string name="pref_profileSettings_title">Personality Profile</string>
    <string name="title_generalSettings">General Settings</string>
    <string name="pref_selectProfile_title">Choose voice for personality</string>
    <string name="pref_selectProfile_dilTitle">Select a voice</string>
    <string name="pref_selecProfile_default">android</string>
    <string name="menu_quick_view">Quick View</string>
    <string name="menu_alert_preferences">Alert preferences</string>
    <string name="menu_monitors">Monitors</string>
    <string name="menu_actors">Actors</string>
    <string name="menu_key_words">Key Words</string>
    <string name="menu_general_settings">General Settings</string>
    <string name="menu_load_test_data" translatable="false">Load Test Data</string>
    <string name="voice_profile">voiceProfile</string>
    <string name="pref_monitorSettings_title">Monitor</string>
    <string name="pref_monitor_title">Choose what to listen for</string>
    <string name="pref_monitor_dilTitle">Select what to listen for</string>
    <string name="pref_monitor_default">keywords</string>
    <string name="alert_for_keywords">keywords</string>
    <string name="alert_for_noiseLevel">noiselevel</string>
    <string name="intent_amp">intent_amp</string>
    <string name="pref_noiseLevel_title">Choose Noise level</string>
    <string name="pref_noiseLevel_dilTitle">Select noise threshold</string>
    <string name="pref_noiseLevel_default">29000</string>
    <string name="sound_filePath">filePath</string>



</resources>
