<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/nav_quick_view"
        android:title="@string/menu_quick_view" />
    <item
        android:id="@+id/nav_alert_preferences"
        android:title="@string/menu_alert_preferences" />
    <item
        android:id="@+id/nav_monitors"
        android:title="@string/menu_monitors" />
    <item
        android:id="@+id/nav_actors"
        android:title="@string/menu_actors" />
    <item
        android:id="@+id/nav_key_words"
        android:title="@string/menu_key_words" />
    <item
        android:id="@+id/nav_general_settings"
        android:title="@string/menu_general_settings" />

    <item
        android:id="@+id/nav_load_data"
        android:title="@string/menu_load_test_data" />

</menu>
