<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/keywords_select_group"
        android:id="@+id/textView"
        android:layout_marginTop="36dp"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/groups_dropdown" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/groups_dropdown"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_key_words"
        android:id="@+id/textView2"
        android:layout_marginTop="36dp"
        android:layout_below="@+id/groups_dropdown"
        android:layout_alignEnd="@+id/add_keyword" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/trigger_text"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_keyword"
        android:id="@+id/add_keyword"
        android:layout_marginTop="54dp"
        android:layout_below="@+id/trigger_text"
        android:layout_alignStart="@+id/trigger_text"
        android:onClick="addTrigger" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:id="@+id/cancel"
        android:layout_alignTop="@+id/add_keyword"
        android:layout_alignEnd="@+id/trigger_text"
        android:onClick="closeActivity" />



</RelativeLayout>